--- a/index.html
+++ b/index.html
@@ -3,45 +3,120 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rat Hatter</title>
+    <title>RattHatter Forum</title>
     <style>
         body {
             background-color: black;
             color: white;
+            font-family: Arial, sans-serif;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            height: 100vh;
             margin: 0;
-            font-family: Arial, sans-serif;
+            padding: 0;
         }
-
-        .logo {
-            font-size: 5em;
-            color: red;
-            text-shadow: 0 0 10px red, 0 0 20px red, 0 0 30px red, 0 0 40px red, 0 0 50px red, 0 0 60px red, 0 0 70px red;
-            margin-bottom: 50px;
+        h1 {
+            margin: 20px;
+            font-size: 2em;
+            color: #ff6347;
         }
-
-        .download-button {
-            font-size: 1.5em;
-            padding: 20px 40px;
-            color: black;
-            background-color: white;
+        #messages {
+            width: 80%;
+            max-width: 600px;
+            height: 400px;
+            border: 1px solid #444;
+            overflow-y: scroll;
+            padding: 10px;
+            background-color: #222;
+            border-radius: 8px;
+            margin-bottom: 20px;
+        }
+        .message {
+            margin: 5px 0;
+            padding: 5px;
+            border-bottom: 1px solid #444;
+        }
+        .username {
+            color: #ffa500;
+            font-weight: bold;
+        }
+        #inputForm {
+            width: 80%;
+            max-width: 600px;
+            display: flex;
+        }
+        #messageInput {
+            flex-grow: 1;
+            padding: 10px;
             border: none;
-            border-radius: 10px;
-            cursor: pointer;
-            text-decoration: none;
+            border-radius: 4px;
+            margin-right: 5px;
+            font-size: 1em;
         }
-
-        .download-button:hover {
-            background-color: #ddd;
+        #sendButton {
+            padding: 10px 20px;
+            font-size: 1em;
+            border: none;
+            background-color: #ff6347;
+            color: white;
+            border-radius: 4px;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-    <div class="logo">Rat Hatter</div>
-    <a href="path/to/your/file" class="download-button" download>Download</a>
+    <h1>RattHatter Forum</h1>
+    <div id="messages"></div>
+    <form id="inputForm">
+        <input type="text" id="messageInput" placeholder="Type your message here..." required>
+        <button type="submit" id="sendButton">Send</button>
+    </form>
+
+    <!-- Firebase App (the core Firebase SDK) -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app.js"></script>
+    <!-- Firebase Database -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-database.js"></script>
+    
+    <script>
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyCXH_1OxZqUlTDFcyg9Ff9hbb49cp5iN4g",
+            authDomain: "ratt-hatter.firebaseapp.com",
+            databaseURL: "https://ratt-hatter-default-rtdb.firebaseio.com",
+            projectId: "ratt-hatter",
+            storageBucket: "ratt-hatter.firebasestorage.app",
+            messagingSenderId: "134323920809",
+            appId: "1:134323920809:web:42d3407214f0b0f4acaeb8",
+            measurementId: "G-QZK64YKD97"
+        };
+
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+
+        // Initialize Firebase Database
+        const db = firebase.database();
+
+        // Handle form submission
+        document.getElementById("inputForm").addEventListener("submit", function (e) {
+            e.preventDefault();
+            
+            const message = document.getElementById("messageInput").value.trim();
+            if (message) {
+                // Push the message to Firebase
+                db.ref('messages').push(message);
+                document.getElementById("messageInput").value = ''; // Clear input field
+            }
+        });
+
+        // Display messages from the database in real-time
+        db.ref('messages').on('child_added', snapshot => {
+            const message = snapshot.val();
+            const messageDiv = document.createElement('div');
+            messageDiv.classList.add('message');
+            messageDiv.innerHTML = `<span class="username">Anonymous:</span> ${message}`;
+            document.getElementById("messages").appendChild(messageDiv);
+            document.getElementById("messages").scrollTop = document.getElementById("messages").scrollHeight;
+        });
+    </script>
 </body>
 </html>
