--- a/index.html
+++ b/index.html
@@ -5,63 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RattHatter Forum</title>
     <style>
-        body {
-            background-color: black;
-            color: white;
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin: 0;
-            padding: 0;
-        }
-        h1 {
-            margin: 20px;
-            font-size: 2em;
-            color: #ff6347;
-        }
-        #messages {
-            width: 80%;
-            max-width: 600px;
-            height: 400px;
-            border: 1px solid #444;
-            overflow-y: scroll;
-            padding: 10px;
-            background-color: #222;
-            border-radius: 8px;
-            margin-bottom: 20px;
-        }
-        .message {
-            margin: 5px 0;
-            padding: 5px;
-            border-bottom: 1px solid #444;
-        }
-        .username {
-            color: #ffa500;
-            font-weight: bold;
-        }
-        #inputForm {
-            width: 80%;
-            max-width: 600px;
-            display: flex;
-        }
-        #messageInput {
-            flex-grow: 1;
-            padding: 10px;
-            border: none;
-            border-radius: 4px;
-            margin-right: 5px;
-            font-size: 1em;
-        }
-        #sendButton {
-            padding: 10px 20px;
-            font-size: 1em;
-            border: none;
-            background-color: #ff6347;
-            color: white;
-            border-radius: 4px;
-            cursor: pointer;
-        }
+        /* Your CSS styling here */
     </style>
 </head>
 <body>
@@ -78,7 +22,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-database.js"></script>
     
     <script>
-        // Your web app's Firebase configuration
+        // Firebase configuration
         const firebaseConfig = {
             apiKey: "AIzaSyCXH_1OxZqUlTDFcyg9Ff9hbb49cp5iN4g",
             authDomain: "ratt-hatter.firebaseapp.com",
@@ -92,6 +36,9 @@
 
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
+        
+        // Enable Firebase logging
+        firebase.database.enableLogging(true);
 
         // Initialize Firebase Database
         const db = firebase.database();
