--- a/index.html
+++ b/index.html
@@ -171,6 +171,13 @@ body::before {
 
         #loginForm input {
             margin: 4px;
+            padding: 3px 10px;
+        }
+
+        #loginForm button {
+            margin: 4px;
+            padding: 5px 10px;
+            margin-bottom: 5px;
         }
 
         /* Scrolling text at the bottom */
